Add add deviceType in ifcInfo
