# internal/core/model.go
@@ -4,9 +4,10 @@ import "encoding/json"
 
 //Model represent device object in the building map
 type Model struct {
-	Name   string `json:"name"`
-	Vendor string `json:"vendor"`
-	URL    string `json:"url"`
+	Name       string `json:"name"`
+	DeviceType string `json:"deviceType"`
+	Vendor     string `json:"vendor"`
+	URL        string `json:"url"`
 }
 
 // ToJSON dump Model struct
